# attodi

./: Dockerfile  README.md  project_updater.py  pyproject.toml
.github/workflows/: backmerge.yaml  deploy-package.yaml  deploy.yaml  test-main.yaml  test.yaml
examples/fastapi/: main.py
src/attodi/: core.py
tests/: test-di.py  test_scoped.py  test_singleton.py  test_transient.py
